test/pass/show/show_try_except.lly
try: {
    try: {
        var v = 1 / 0
    except IndexError:
        var b = 11
    }
except DivisionByZeroError:
    var c = 11
}

show(__main__)
