test/fail/exceptions/dual_raise.lly
#[
DivisionByZeroError: Attempt to divide by zero.
Traceback:
    from dual_raise.lly:10: in __main__
]#

try:
    raise ValueError("10")
except ValueError:
    var v = 1 / 0
